Bug 1748146 - Return early in AbortSignal::SignalAbort r=smaug

Currently only AbortSignalImpl::SignalAbort returns early. Both can be called directly, so both should return early.

Currently not really testable since this is only problematic in dom/streams and it's still hidden by a build flag.

Differential Revision: https://phabricator.services.mozilla.com/D135278